# Game

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  premake5.lua
Dependencies/: CMakeLists.txt  Dependencies.lua
Dependencies/Casc/: CMakeLists.txt
Dependencies/Casc/src/: CascFiles.cpp  CascOpenFile.cpp  CascReadFile.cpp  CascRootFile_MNDX.cpp
Dependencies/Casc/src/common/: Common.cpp  Common.h  FileStream.cpp  FileTree.cpp  Map.h  Mime.cpp
Dependencies/Casc/src/jenkins/: lookup3.c
Dependencies/Jolt/: CMakeLists.txt
Dependencies/Jolt/Jolt/Core/: IssueReporting.cpp
Dependencies/jolt/: CMakeLists.txt  jolt.lua
Source/AssetConverter/: CMakeLists.txt
Source/AssetConverter/AssetConverter/: Runtime.h  main.cpp
Source/AssetConverter/AssetConverter/Casc/: CascListFile.cpp  CascListFile.h  CascLoader.cpp  CascLoader.h
Source/AssetConverter/AssetConverter/Extractors/: ClientDBExtractor.cpp  ClientDBExtractor.h  ComplexModelExtractor.cpp  ComplexModelExtractor.h  MapExtractor.cpp  MapExtractor.h  MapObjectExtractor.cpp  MapObjectExtractor.h
Source/AssetConverter/AssetConverter/Util/: ServiceLocator.cpp  ServiceLocator.h
Source/Game/: CMakeLists.txt  Game.lua  main.cpp
Source/Game/Game/: main.cpp
Source/Game/Game/Animation/: AnimationSystem.cpp  AnimationSystem.h
Source/Game/Game/Application/: Application.cpp  Application.h  ConsoleCommandHandler.cpp  ConsoleCommandHandler.h  ConsoleCommands.cpp  ConsoleCommands.h  EnttRegistries.h  Message.h
Source/Game/Game/ECS/: Scheduler.cpp  Scheduler.h
Source/Game/Game/ECS/Components/: AABB.h  Camera.h  CastInfo.h  DisplayInfo.h  DynamicMesh.h  Model.h  MovementInfo.h  Name.h  NetworkedEntity.h  Tags.h  Transform.h  UnitStatsComponent.h
Source/Game/Game/ECS/Singletons/: ActiveCamera.h  AreaLightInfo.h  CameraSaveDB.h  CharSectionSingleton.h  CharacterSingleton.h  ClientDBCollection.h  ClientDBSingleton.h  EngineStats.h  FreeflyingCameraSettings.h  JoltState.h  LiquidDB.h  MapDB.h  NetworkState.h  OrbitalCameraSettings.h  RenderState.h  ScriptState.h  Skybox.h  TextureSingleton.h  UISingleton.h
Source/Game/Game/ECS/Systems/: CalculateCameraMatrices.cpp  CalculateCameraMatrices.h  CalculateShadowCameraMatrices.cpp  CalculateShadowCameraMatrices.h  CalculateTransformMatrices.cpp  CharacterController.cpp  CharacterController.h  DrawDebugMesh.cpp  DrawDebugMesh.h  FreeflyingCamera.cpp  FreeflyingCamera.h  NetworkConnection.cpp  OrbitalCamera.cpp  OrbitalCamera.h  UpdateAABBs.cpp  UpdateAreaLights.cpp  UpdateAreaLights.h  UpdateDayNightCycle.cpp  UpdateDayNightCycle.h  UpdateNetworkedEntity.cpp  UpdatePhysics.cpp  UpdatePhysics.h  UpdateScripts.cpp  UpdateSkyboxes.cpp
Source/Game/Game/ECS/Util/: CameraUtil.cpp  CameraUtil.h  CharSectionUtil.cpp  EventUtil.h  MapDBUtil.cpp  MapDBUtil.h  MapUtil.cpp  MapUtil.h  MessageBuilderUtil.cpp  MessageBuilderUtil.h  Transform2D.cpp  Transform2D.h  Transforms.cpp  Transforms.h  UIUtil.cpp  UIUtil.h
Source/Game/Game/Editor/: ActionStack.cpp  ActionStack.h  AssetBrowser.cpp  AssetBrowser.h  BaseEditor.cpp  BaseEditor.h  CVarEditor.cpp  CVarEditor.h  CameraInfo.cpp  CameraInfo.h  Clock.cpp  EaseCurveTool.cpp  EaseCurveTool.h  EditorHandler.cpp  EditorHandler.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  MapEditor.cpp  MapEditor.h  MapSelector.cpp  MapSelector.h  NetworkedInfo.cpp  NetworkedInfo.h  PerformanceDiagnostics.cpp  PerformanceDiagnostics.h  SkyboxSelector.cpp  SkyboxSelector.h  TerrainTools.cpp  TerrainTools.h  Viewport.cpp  Viewport.h
Source/Game/Game/Gameplay/: MapLoader.cpp  MapLoader.h
Source/Game/Game/Gameplay/GameConsole/: GameConsole.cpp  GameConsole.h  GameConsoleCommandHandler.cpp  GameConsoleCommandHandler.h  GameConsoleCommands.cpp  GameConsoleCommands.h
Source/Game/Game/Loaders/: LoaderSystem.cpp  LoaderSystem.h
Source/Game/Game/Loaders/ClientDB/: ClientDBLoader.cpp  ClientDBLoader.h
Source/Game/Game/Loaders/Texture/: TextureLoader.cpp  TextureLoader.h
Source/Game/Game/Rendering/: Camera.h  CullUtils.cpp  CullUtils.h  CulledRenderer.cpp  CulledRenderer.h  CullingResources.cpp  CullingResources.h  GameRenderer.cpp  GameRenderer.h  PixelQuery.cpp  RenderResources.h  RenderUtils.cpp  RenderUtils.h  Types.h  UIRenderer.cpp
Source/Game/Game/Rendering/Canvas/: Canvas.cpp  CanvasRenderer.cpp  CanvasRenderer.h
Source/Game/Game/Rendering/Debug/: DebugRenderer.cpp  DebugRenderer.h  JoltDebugRenderer.cpp  JoltDebugRenderer.h
Source/Game/Game/Rendering/Editor/: EditorRenderer.cpp
Source/Game/Game/Scripting/: LuaDefines.h  LuaManager.cpp  LuaManager.h  LuaState.cpp  LuaState.h  LuaStateCtx.cpp  LuaStateCtx.h  LuaUtil.cpp  LuaUtil.h  ScriptCtx.h
Source/Game/Game/Scripting/UI/: Box.cpp  (+9 more)
Source/Game/Game/UI/: Templates.h
Source/Game/Game/Util/: CameraSaveUtil.h  CharacterControllerUtil.cpp  CharacterControllerUtil.h  ImguiUtil.cpp  ImguiUtil.h  JoltStream.cpp  JoltStream.h  MapUtil.cpp  MapUtil.h  PhysicsUtil.cpp  PhysicsUtil.h  ServiceLocator.cpp  ServiceLocator.h  UnitUtil.cpp
Source/Game/GameTests/: CMakeLists.txt
Source/Game/GameTests/GameTests/: main.cpp
Source/ShaderCookerStandalone/: CMakeLists.txt  ShaderCookerStandalone.lua  main.cpp
(+815 files in other folders)
